# multi-cloud-ai-orchestrator

./: .env.example  .gitignore  Dockerfile  README 2.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
deploy/docker/: prometheus.yml
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  namespace.yaml  secrets.yaml  service.yaml
docs/: Deployment.md
docs/adr/: 001-hexagonal-architecture.md  002-state-machine-deployment.md  003-distributed-locking.md  004-agent-based-execution.md  005-simulated-infrastructure.md
src/orchestrator/: __init__.py  config.py  main.py
src/orchestrator/api/: app.py
src/orchestrator/api/dependencies/: auth.py  services.py
src/orchestrator/api/middleware/: correlation.py  rate_limiter.py
src/orchestrator/api/routes/: auth_routes.py  deployment_routes.py  drift_routes.py  health_routes.py
src/orchestrator/api/schemas/: auth_schemas.py  deployment_schemas.py  drift_schemas.py
src/orchestrator/domain/: __init__.py
src/orchestrator/domain/events/: __init__.py  deployment_events.py
src/orchestrator/domain/models/: __init__.py  base.py  cloud_provider.py  deployment.py  drift.py  task.py  user.py
src/orchestrator/domain/ports/: repositories.py  services.py
src/orchestrator/domain/services/: deployment_service.py  drift_service.py
src/orchestrator/infrastructure/ai/: drift_detector.py  planning_engine.py
src/orchestrator/infrastructure/auth/: jwt_handler.py
src/orchestrator/infrastructure/cache/: redis_cache.py
src/orchestrator/infrastructure/messaging/: event_publisher.py
src/orchestrator/infrastructure/observability/: logging.py  metrics.py  tracing.py
src/orchestrator/infrastructure/persistence/: database.py  models.py
src/orchestrator/infrastructure/persistence/repositories/: __init__.py  deployment_repo.py  drift_repo.py  in_memory.py  task_repo.py  user_repo.py
src/orchestrator/infrastructure/terraform/: executor.py
src/orchestrator/workers/: base.py  health_worker.py  terraform_worker.py
tests/: conftest.py
tests/unit/api/: test_schemas.py
tests/unit/application/: test_deployment_service.py  test_drift_service.py
tests/unit/domain/: test_base.py  test_cloud_provider.py  test_deployment.py  test_drift.py  test_execution_plan.py  test_task.py  test_user.py
tests/unit/infrastructure/: test_config.py  test_drift_detector.py  test_event_publisher.py  test_in_memory_repos.py  test_jwt.py  test_logging.py  test_middleware.py  test_planning_engine.py  test_terraform.py
tests/unit/workers/: test_health_worker.py  test_terraform_worker.py  test_worker.py
