[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "multi-cloud-deployment-orchestrator"
version = "1.0.0"
description = "Autonomous multi-cloud deployment orchestrator with AI-driven planning"
requires-python = ">=3.10"
license = "MIT"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
